@@ -16,6 +16,9 @@ pyReScene 0.6
  * ReSample: construct SRS for some bad MP3 files too + print warning
  * ReSample: "OverflowError: Python int too large to convert to C long"
              on a bad MP3 file fixed
+ * ReSample: new option to keep sample reconstruction failures (-k)
+             Default behavior changed to delete the broken file.
+             (except for music to prevent accidental deletion when fixing tags)
  * ReScene: SRR was stored in subfolder instead of output folder
  * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
  * ReScene: -x and -d extracts to folder named after .srr in the output path
